--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 <!-- About the principal start-->
 <section>
     <div class="about-the-principal">
+        <div class="container"></div>
           <div class="about-the-principal-img">
                <img src="image/samantha-tay/about-the-principal.png" alt="">
           </div>
@@ -86,6 +87,7 @@
      </div>
  </div>
  </div>
+</div>
  </section>
    <!-- About the principal end  -->
  
@@ -93,6 +95,7 @@
  
   <section id="form">
      <div class="form-text">
+        <div class="container">
          <h1 class="form-heading">Want to change your life for better?</h1>
          <p class="form-para">Schedule a trial session! Fill out the form, choose a convenient date, and join a free group session.</p>
         
@@ -106,6 +109,7 @@
     </div>
     <div>
         <img src="image/samantha-tay/about-the-principal.png" alt="">
+    </div>
     </div>
  </section>
  <!-- Form end --> 
@@ -151,7 +155,9 @@
  <!-- Our Philosophy start -->
 
  <section id="our-philosophy">
-    <div class="our-philosophy-img">
+    <div class="container">
+    
+        <div class="our-philosophy-img">
         <img src="image/philosophy1/philosophy -image-1.png" alt="">
     </div>
     <div class="our-philosophy-text-area">
@@ -176,6 +182,7 @@
     <div class="and-you-img">
         <img src="image/philosophy2/philosophy-image2.png" alt="">
     </div>
+</div>
  </section> 
 
 <!-- Our philosophy end -->
