--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <!-- About the principal start-->
 <section>
     <div class="about-the-principal">
-        <div class="container"></div>
+        <div class="container">
           <div class="about-the-principal-img">
                <img src="image/samantha-tay/about-the-principal.png" alt="">
           </div>
